# RustyTerminAI

./: .env  Cargo.toml  TerminAI-hook.sh  grok-cli-hook.sh  install.sh
src/: main.rs
