[package]
name = "grok-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }  # Native TLS for static binary
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }  # For async
toml = "0.8"  # For config
whoami = "1.5"  # For username/context